# cmd/server/docs/swagger.yaml
@@ -13,7 +13,7 @@ definitions:
         type: string
       exempt_ports:
         example:
-        - "9090"
+        - "7999"
         - "7999"
         items:
           type: string
@@ -44,12 +44,16 @@ definitions:
         example: 3000
         type: integer
       auth_url:
-        description: Relative Verify URL (default /auth)
-        example: /auth
+        description: Relative Verify URL (default /api/auth/verify)
+        example: /api/auth/verify
         type: string
       login_url:
         description: Relative Login URL (default /login)
         example: /login
+        type: string
+      logout_url:
+        description: Relative Logout URL (default /api/auth/logout)
+        example: /api/auth/logout
         type: string
     type: object
   models.Rule:
@@ -68,7 +72,7 @@ definitions:
         example: true
         type: boolean
       target:
-        description: Target URL (e.g., "http://localhost:9091")
+        description: Target URL (e.g., "http://localhost:7996")
         example: http://localhost:8080
         type: string
       use_auth:
@@ -110,7 +114,7 @@ definitions:
       timestamp:
         type: integer
     type: object
-host: 127.0.0.1:9091
+host: 127.0.0.1:7996
 info:
   contact: {}
   description: API for managing proxy rules and iptables.
@@ -399,6 +403,36 @@ paths:
           schema:
             $ref: '#/definitions/response.Response'
       summary: List iptables rules
+      tags:
+      - iptables
+  /api/iptables/remove:
+    post:
+      consumes:
+      - application/json
+      description: Remove an ALLOW/BLOCK rule for a specific IP
+      parameters:
+      - description: IP to remove
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/iptables.ipRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Remove IP rule
       tags:
       - iptables
   /api/rules:
